New vertex group behaves as if assigned until modified #37914

Closed
opened 2013-12-22 03:35:28 +01:00 by gandalf3 · 6 comments
Member

System Information
Archlinux
Nvidia 7900GT

Blender Version
Broken:

2.69 Release (from blender.org)
2.69.7 Build hash: b2fdc59 Date: 2013-12-20 00:40 (From the buildbot)

Short description of error
Adding a new vertex group without assigning anything and using it in the mask modifier does not give expected results.

Exact steps for others to reproduce the error

  1. Open a new file
  2. Add a new vertex group without assigning anything to it
  3. Add a mask modifier and select the vertex group. This should hide all the geometry, but it does not.
  4. Assign and remove something to the vertex group. The mask modifier now works as expected.

See Mask_modifier_vertex_groups.blend for the result of steps 1-3.

**System Information** Archlinux Nvidia 7900GT **Blender Version** Broken: 2.69 Release (from blender.org) 2.69.7 Build hash: b2fdc59 Date: 2013-12-20 00:40 (From the buildbot) **Short description of error** Adding a new vertex group without assigning anything and using it in the mask modifier does not give expected results. **Exact steps for others to reproduce the error** 1. Open a new file 2. Add a new vertex group without assigning anything to it 3. Add a mask modifier and select the vertex group. This should hide all the geometry, but it does not. 4. Assign and remove something to the vertex group. The mask modifier now works as expected. See [Mask_modifier_vertex_groups.blend](https://archive.blender.org/developer/F52062/Mask_modifier_vertex_groups.blend) for the result of steps 1-3.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Campbell Barton self-assigned this 2013-12-22 04:59:44 +01:00

This issue was referenced by blender/blender-addons-contrib@d064968c27

This issue was referenced by blender/blender-addons-contrib@d064968c2797358684817be289f211cd88795281

This issue was referenced by d064968c27

This issue was referenced by d064968c2797358684817be289f211cd88795281

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d064968c27.

Closed by commit d064968c27.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37914
No description provided.