Fix T37914: Mask modifier behaves differently until painted